# wasp-deep-learning-for-nlp

./: README.md  main.py  pyproject.toml  requirements.txt
ass_1_tokenisation_and_embeddings/a1_1/: A1_notebook.ipynb  A1_skeleton.py
ass_1_tokenisation_and_embeddings/a1_1/trained_output/: config.json  model.safetensors  terminal_log.txt
ass_2_transformer_lms/a1_2/: A2_notebook.ipynb  A2_skeleton.py  tokenizer.tok
ass_2_transformer_lms/a1_2/results/: config.json  terminal.txt
project/: Untitled Diagram (1).drawio  old.drawio  schema.drawio
