[project]
name = "wasp-dl4nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.13",
    "torch>=2.11.0",
    "transformers>=5.5.4",
]
